# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  cell.cpp  cell.h  creature.cpp  creature.h  creatureType.h  creaturefactory.cpp  creaturefactory.h  fish.cpp  fish.h  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingswindow.cpp  settingswindow.h  settingswindow.ui  shark.cpp  shark.h  utils.cpp  utils.h  world.cpp  world.h
.github/workflows/: Qt-CPP-build.yml
FishTests/: CMakeLists.txt  test_fish.cpp
QtTests/: CMakeLists.txt  testfish.cpp  testworld.cpp  tst_sampletest.cpp
SharkTests/: CMakeLists.txt  test_shark.cpp
WorldTests/: CMakeLists.txt  test_world.cpp
